# Binance-Trading-Bot

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
binance_trading_bot/: __init__.py  main.py
binance_trading_bot/api/: __init__.py  client.py
binance_trading_bot/core/: __init__.py  config.py  exceptions.py  logging.py
binance_trading_bot/engine/: __init__.py  position_manager.py  risk_manager.py  signal_processor.py  trading_engine.py
binance_trading_bot/strategies/: __init__.py  base.py  registry.py  stoch_rsi_macd.py  triple_ema.py
monitoring/: alert_rules.yml  prometheus.yml
tests/: __init__.py  conftest.py  test_config.py  test_risk_manager.py  test_strategies.py
